--- a/Bloom_Buddy/m-chat option 2/index.html
+++ b/Bloom_Buddy/m-chat option 2/index.html
@@ -2,7 +2,7 @@
 
 <html lang="english">
   <head>
-    <title>M-CHAT-R™ SURVEY</title>
+    <title>exported project</title>
     <meta property="og:title" content="exported project" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta charset="utf-8" />
@@ -12,7 +12,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
-    <link rel="stylesheet" href="./css/reset.css">
+    <style data-tag="reset-style-sheet">
+      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
+    </style>
+    <style data-tag="default-style-sheet">
+      html {
+        font-family: Poppins;
+        font-size: 1em;
+      }
+
+      body {
+        font-weight: 400;
+        font-style:normal;
+        text-decoration: none;
+        text-transform: none;
+        letter-spacing: normal;
+        line-height: 1.15;
+        color: var(--dl-color-gray-black);
+        background-color: var(--dl-color-gray-white);
+
+      }
+    </style>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -32,7 +52,7 @@
 
       <div class="mchat-survey-container">
         <header
-          class="mchat-header mchat-header-root-class-name5"
+          class="mchat-header-h-e-a-d-e-r mchat-header mchat-header-root-class-name5"
         >
           <a
             href="https://thebloombuddy.com"
@@ -112,14 +132,14 @@
             <div
               class="mchat-buttons-container mchat-buttons-root-class-name19"
             >
-              <button type="submit" class="mchat-buttons-button content prev-btn">
+              <button type="submit" class="mchat-buttons-button content">
                 <span>Previous</span>
               </button>
             </div>
             <div
               class="mchat-buttons-container mchat-buttons-root-class-name20"
             >
-              <button type="submit" class="mchat-buttons-button content next-btn">
+              <button type="submit" class="mchat-buttons-button content">
                 <span>Next</span>
               </button>
             </div>
@@ -231,14 +251,14 @@
             <div
               class="mchat-buttons-container mchat-buttons-root-class-name21"
             >
-              <button type="submit" class="mchat-buttons-button content prev-btn">
+              <button type="submit" class="mchat-buttons-button content">
                 <span>Previous</span>
               </button>
             </div>
             <div
               class="mchat-buttons-container mchat-buttons-root-class-name22"
             >
-              <button type="submit" class="mchat-buttons-button content next-btn">
+              <button type="submit" class="mchat-buttons-button content">
                 <span>Next</span>
               </button>
             </div>
@@ -315,7 +335,7 @@
             <div
               class="mchat-buttons-container mchat-buttons-root-class-name23"
             >
-              <button class="mchat-buttons-button content">
+              <button type="submit" class="mchat-buttons-button content">
                 <span>Previous</span>
               </button>
             </div>
@@ -323,7 +343,7 @@
               <div
                 class="mchat-buttons-container mchat-buttons-root-class-name24"
               >
-                <button class="mchat-buttons-button content next-btn">
+                <button type="submit" class="mchat-buttons-button content">
                   <span>Next</span>
                 </button>
               </div>
@@ -795,142 +815,7 @@
             © 2009 Diana Robins, Deborah Fein &amp; Marianne Barton
           </span>
         </div>
-        <div class="mchat-survey-container125 result">
-          <svg viewBox="0 0 1024 1024" class="mchat-survey-icon success-icon">
-            <path d="M864 128l-480 480-224-224-160 160 384 384 640-640z"></path>
-          </svg>
-          <h1 class="mchat-survey-text113 h2">
-            <span>RESULT:</span>
-            <span class="mchat-survey-text115">LOW RISK</span>
-            <br />
-            <span>(M-CHAT-R-SCORE:0-2)</span>
-            <br />
-          </h1>
-          <span class="mchat-survey-text119">
-            Your child’s M-CHAT-R-F™️ score indicates a low risk for Autism
-            Spectrum Disorder. If your child is younger than 24 months, screen
-            again after second birthday or at future well-child visits. No
-            further action required unless surveillance indicates risk for ASD.
-          </span>
-          <span class="mchat-survey-text120">
-            <span>You may book an appointment to</span>
-            <a
-              href="https://www.thebloombuddy.com/coming-soon1.html"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="mchat-survey-link4"
-            >
-              see a Specialist
-            </a>
-            <span></span>
-            <span>if you still have any cause for concerns</span>
-          </span>
-          <button class="mchat-survey-button h3">
-            DOWNLOAD YOUR RESULT AS PDF
-          </button>
-          <span class="mchat-survey-text124">
-            © 2009 Diana Robins, Deborah Fein &amp; Marianne Barton
-          </span>
-        </div>
-        <div class="mchat-survey-container126 result">
-          <svg viewBox="0 0 1024 1024" class="mchat-survey-icon2 success-icon">
-            <path d="M864 128l-480 480-224-224-160 160 384 384 640-640z"></path>
-          </svg>
-          <h1 class="mchat-survey-text125 h2">
-            <span>RESULT:</span>
-            <span class="mchat-survey-text127">MEDIUM RISK</span>
-            <br />
-            <span>(M-CHAT-R-SCORE:3-6)</span>
-            <br />
-          </h1>
-          <span class="mchat-survey-text131">
-            <span>
-              Your child’s M-CHAT-R-F™️ score indicates a medium risk for Autism
-              Spectrum Disorder. A follow-up or second stage of screening is
-              required (second stage of M-CHAT-R/F) to get additional
-              information about at-risk responses.
-            </span>
-            <br />
-            <br />
-            <span>
-              Based on the result of your child’s M-CHAT-R-F score, we recommend
-              that you seek further diagostic evaluation and eligibility
-              evaluation for early intervention.
-            </span>
-          </span>
-          <span class="mchat-survey-text136">
-            <span>You may book an appointment to</span>
-            <a
-              href="https://www.thebloombuddy.com/coming-soon1.html"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="mchat-survey-link5"
-            >
-              see a Specialist
-            </a>
-            <span></span>
-            <span>if you still have any cause for concerns</span>
-          </span>
-          <button class="mchat-survey-button1 h3">
-            DOWNLOAD YOUR RESULT AS PDF
-          </button>
-          <span class="mchat-survey-text140">
-            © 2009 Diana Robins, Deborah Fein &amp; Marianne Barton
-          </span>
-        </div>
-        <div class="mchat-survey-container127 result">
-          <svg viewBox="0 0 1024 1024" class="mchat-survey-icon4 success-icon">
-            <path d="M864 128l-480 480-224-224-160 160 384 384 640-640z"></path>
-          </svg>
-          <h1 class="mchat-survey-text141 h2">
-            <span>RESULT:</span>
-            <span class="mchat-survey-text143">HIGH RISK</span>
-            <br />
-            <span>(M-CHAT-R-SCORE:7-23)</span>
-            <br />
-          </h1>
-          <span class="mchat-survey-text147">
-            Your child’s M-CHAT-R-F™️ score indicates a high risk for Autism
-            Spectrum Disorder. Based on this score, it is strongly recommended
-            that you immediately seek diagnostic evaluation and eligibility
-            evaluation for early intervention. 
-          </span>
-          <span class="mchat-survey-text148">
-            <span>You may book an appointment to</span>
-            <a
-              href="https://www.thebloombuddy.com/coming-soon1.html"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="mchat-survey-link6"
-            >
-              see a Specialist
-            </a>
-            <span></span>
-            <span>if you still have any cause for concerns</span>
-          </span>
-          <button class="mchat-survey-button2 h3">
-            DOWNLOAD YOUR RESULT AS PDF
-          </button>
-          <span class="mchat-survey-text152">
-            © 2009 Diana Robins, Deborah Fein &amp; Marianne Barton
-          </span>
-        </div>
       </div>
     </div>
   </body>
-  <script type="text/javascript">
-    jQuery(document).ready(function($) {
-        $(window).load(function() {
-            $('.next-btn').click(function(){
-                $('.nav-tabs > .active').next('li').find('a').trigger('click');
-            });
-            $('.btnPrevious').click(function(){
-                $('.step > .active').prev('li').find('a').trigger('click');
-            });
-
-            $('[data-toggle="tooltip"]').tooltip();
-
-        })
-    })
-    </script>
 </html>
